--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -28,6 +28,14 @@
     groups:
       - sudo
 
+- name: Enable passwordless sudo
+  lineinfile:
+    path: /etc/sudoers
+    state: present
+    regexp: '^%sudo'
+    line: '%sudo ALL=(ALL) NOPASSWD: ALL'
+    validate: 'visudo -cf %s'
+
 - name: Copy SSH key
   authorized_key:
     user: "{{ username }}"
