--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -24,6 +24,11 @@
   hostname:
     name: "{{ hostname }}"
 
+- name: Copy boot cmdline file
+  copy:
+    src: cmdline.txt
+    dest: /boot/firmware/cmdline.txt
+
 - name: Create user accounts
   user:
     name: "{{ username }}"
