--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory
-remote_user = kube
+remote_user = ubuntu
 host_key_checking = False
 ansible_python_interpreter = /usr/bin/python3
 retry_files_enabled = False
