add tasks to download k3s

--- a/group_vars/all/all.yaml
+++ b/group_vars/all/all.yaml
@@ -6,6 +6,7 @@ ansible_become: yes
 username: kube
 
 # K3s
+k3s_version: v1.18.8+k3s1
 systemd_dir: /etc/systemd/system
 master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
 extra_server_args: ""
