--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -59,3 +59,16 @@
     mode: 0600
     validate: /usr/sbin/sshd -tf %s
   notify: restart sshd
+
+- name: Delete k3s if already present
+  file:
+    path: /usr/local/bin/k3s
+    state: absent
+
+- name: Download k3s binary arm64
+  get_url:
+    url: https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/k3s-arm64
+    dest: /usr/local/bin/k3s
+    owner: root
+    group: root
+    mode: 0755
