add install nfs-common to task

--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -1,8 +1,9 @@
 ---
-- name: Install ssh server
+- name: Install required apt packages
   apt:
     name:
       - openssh-server
+      - nfs-common
     state: latest
     update_cache: yes
     cache_valid_time: 3600
